@@ -34,6 +34,8 @@ LIBGIGEDIT_LT_AGE=0
 
 SHARED_VERSION_INFO="$LIBGIGEDIT_LT_CURRENT:$LIBGIGEDIT_LT_REVISION:$LIBGIGEDIT_LT_AGE"
 AC_LANG([C++])
+AC_PROG_OBJC
+AC_PROG_OBJCXX
 AC_PROG_CXX
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
